[package]
name = "helix-lsp-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
color-eyre = "0.6.2"
crossterm = "0.27.0"
dotenvy = "0.15.7"
fakeit = "1.2.0"
indicatif = "0.17.8"
itertools = "0.12.1"
ratatui = "0.26.1"
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
simple-home-dir = "0.3.2"
tempfile = "3.10.0"
tokio = { version = "1.36.0", features = ["full"] }
unicode-width = "0.1.11"
zip = "0.6.6"
